--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,42 @@
   font-size: 16px;
   color: #282c34;
 }
+
+.login-container {
+  background-color: white;
+  padding: 45px 35px;
+  border-radius: 3px;
+  min-width: 300px;
+}
+
+.stack-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.center-text {
+  text-align: center;
+}
+
+.form-input {
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+  line-height: 1.5;
+}
+
+.form-label {
+  margin: 0.5rem 0;
+}
+
+.btn {
+  margin-top: 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  cursor: pointer;
+  font-size: 1rem;
+  background-color: #0d6efd;
+  color: #fff;
+}
